# graph-neural-networks

./: .gitignore  20newsGNN.py  README.md  authorshipGNN.py  flockingGNN.py  movieGNN.py  pyproject.toml  setup.py  sourceLocGNN.py  tutorial.ipynb
Modules/: architectures.py  architecturesTime.py  evaluation.py  loss.py  model.py  train.py  training.py
Utils/: dataTools.py  graphML.py  graphTools.py  miscTools.py  visualTools.py
alegnn/modules/: architectures.py  architecturesTime.py  evaluation.py  loss.py  model.py  training.py
alegnn/utils/: dataTools.py  graphML.py  graphTools.py  miscTools.py
datasets/epidemics/: edge_list.txt
datasets/facebookEgo/: facebookEgo234.pkl
examples/: authorshipGNN.py  epidemicGRNN.py
